feat(test): Implementación de los test